--- a/.gitconfig
+++ b/.gitconfig
@@ -1,31 +1,53 @@
-[push]
-        default = matching
-[core]
-        trustctime = false
-        editor = vim
-        filemode = false
+# vi:sw=2:sts=2:ts=2:expandtab
 [color]
-        ui = true
-[credential]
-        helper = cache --timeout=3600
-[merge]
-        tool = vimdiff
-[mergetool]
-        keeptemporaries = false
-        keepbackups = false
-        prompt = false
-        trustexitcode = false
-[alias]
-        last = log -1 --stat
-        cp = cherry-pick
-        co = checkout
-        cl = clone
-        ci = commit
-        st = status -sb
-        br = branch
-        unstage = reset HEAD --
-        dc = diff --cached
-        lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %Cblue<%an>%Creset' --abbrev-commit --date=relative --all
+  ui = auto
+
 [user]
-        name = Tiago Ferreira
-        email = dev.tiago@gmail.com
+	name = Tiago Ferreira
+	email = dev.tiago@gmail.com
+
+[core]
+  autocrlf = false
+  excludesfile = ~/.gitignore
+  whitespace = blank-at-eol,blank-at-eof,space-before-tab,tab-in-indent
+  # Use the best pager available
+  pager = (which diff-so-fancy >/dev/null 2>&1 && diff-so-fancy || which brew >/dev/null 2>&1 && $(brew --prefix git)/share/git-core/contrib/diff-highlight/diff-highlight || cat)|less
+
+[push]
+  default = simple
+
+[commit]
+  # Show diff when preparing commit message
+  verbose = true
+
+[alias]
+  a = add
+  s = status
+  st = status
+  ci = commit
+  b = branch
+  co = checkout
+  re = remote
+  d = diff
+  ls = ls-files
+  lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+
+[merge]
+  tool = vimdiff
+  conflictstyle = diff3
+
+[mergetool]
+  prompt = false
+  keepBackup = false
+
+[mergetool "vimdiff"]
+  cmd = vim -d $BASE $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
+
+
+###
+### Include local overrides
+###
+[include]
+  path = .gitconfig.local
+[credential]
+  helper = "cache --timeout 86400"
