custom gitconfig files for work and personal folders

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,11 @@
 
 [user]
 	name = Tiago Ferreira
-	email = dev.tiago@gmail.com
+  
+[includeIf "gitdir:~/work/"]
+    path = .gitconfig-work
+[includeIf "gitdir:~/personal/"]
+    path = .gitconfig-personal
 
 [core]
   autocrlf = false
