--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -16,5 +16,6 @@ keyid-format 0xlong
 list-options show-uid-validity
 verify-options show-uid-validity
 with-fingerprint
-use-agent
+#use-agent
 require-cross-certification
+
