--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 [user]
 	name = tacf
 	email = dev.tiago@gmail.com
-	signingkey = 0xE3AAD82D9AE22334
+  signingkey = 845B93087F950D88
   
 [includeIf "gitdir:~/work/"]
     path = .gitconfig-work
@@ -65,4 +65,4 @@
 	process = git-lfs filter-process
 	required = true
 [gpg]
-	program = /usr/local/bin/gpg
+	program = /opt/homebrew/bin/gpg
